<resources>

    <string name="app_name">FlickPicker</string>
    <string name="my_profile_icon">&#xf007;</string>
    <string name="settings_icon">&#xf085;</string>
    <string name="recommendations_tab_icon">&#xf209;</string>
    <string name="recommendations_tab_icon2">&#xf21e;</string>
    <string name="community_tab_icon">&#xf0ac;</string>
    <string name="friends_tab_icon">&#xf0c0;</string>
    <string name="my_collection_tab_icon">&#xf187;</string>
    <string name="search_tab_icon">&#xf002;</string>

    <string name="action_settings">Settings</string>

    <string name="movie_detail_title_default">A great movie</string>
    <string name="movie_detail_genre_default">Genre: n/a</string>
    <string name="movie_detail_num_of_friends_seen_label">friends have seen this</string>
    <string name="movie_detail_num_of_friends_seen_default">0</string>
    <string name="movie_detail_community_rating_label">Community rating</string>
    <string name="movie_detail_community_rating_default">2,5</string>
    <string name="movie_detail_description_default">Lorem ago in a galaxy far, far away&#8230;</string>
    <string name="movie_detail_add_to_watchlist_button">+</string>
    <string name="movie_detail_rate_button">Rate!</string>

    <string name="no_user_profile_desc">User has not selected a profile picture</string>
    <string name="communityButton">Community</string>
    <string name="userTextView">User</string>
    <string name="myCollectionButton">MyCollection</string>
    <string name="has_watchedTextView">has watched..</string>
    <string name="movieTextView">Movie</string>
    <string name="just_watchedTextView">just watched..</string>
    <string name="yearTextView">(year)</string>
    <string name="and_rated_it_Textview">&#8230;and rated it:</string>
    <string name="add_movie_to_playlist">Add movie to watchlist</string>
    <string name="remove_movie_from_playlist">Remove from watchlist</string>
    <string name="search_for_a_friend_hint">Search for a friend&#8230;</string>
    <string name="no_user_profile">&#xf007;</string>
    <string name="friends_have_seen_this_label_end">" friends have seen this"</string>
    <string name="rated_by_community_label_start">"Rated "</string>
    <string name="rated_by_community_label_end">" by the community"</string>
    <string name="my_profile_names_hint">"enter name here &#8230;"</string>

    <!-- STRINGS CUSTOM_ROW_SEARCH_USER -->

    <string name="custom_row_username">Username</string>
    <string name="profile_code_font">&#xf007;</string>
    <string name="check_code_font">&#xf234;</string>
    <string name="uncheck_code_font">&#xf235;</string>
    <string name="edit_code_font">&#xf044;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theManTheMythTheLegend">Sibelius</string>

</resources>