<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_backdrop"
    android:weightSum="1">

    <ImageView
        android:contentDescription="@string/no_user_profile_desc"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/no_user_profile"
        android:layout_weight="1.0"
        android:layout_gravity="left|top"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="297dp"
        android:layout_height="match_parent"
        android:layout_gravity="right|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/userTextView"
                android:id="@+id/username_textview"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/just_watchedTextView"
                android:id="@+id/textView4"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/movieTextView"
                android:id="@+id/moviename_textview"
                android:layout_gravity="center_horizontal|left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/yearTextView"
                android:id="@+id/movie_year_textview"
                android:layout_gravity="center_horizontal|left"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/and_rated_it_Textview"
            android:id="@+id/textView3"
            />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:isIndicator="true"
            />

    </LinearLayout>

</LinearLayout>