<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@color/color_primary"
    android:id="@+id/relativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/flickPickerText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_text"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile_icon"
        android:id="@+id/myProfileIcon"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/color_text"
        android:padding="@dimen/movie_detail_image_padding"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/userScore"
        android:textColor="@color/color_text"
        android:text="100"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/myProfileIcon"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_icon"
        android:id="@+id/settingsIcon"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:textColor="@color/color_text"
        android:padding="@dimen/movie_detail_image_padding"
        android:clickable="true"/>


</RelativeLayout>