<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:weightSum="1"
        android:background="@drawable/list_cell_2"
        android:padding="5dp"

    >

        <ImageView
            android:contentDescription="@string/no_user_profile_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/rowCommunityImageView"
            android:layout_gravity="start"
            android:minWidth="100dp"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|top"
            android:padding="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/movieTextView"
                    android:id="@+id/rowCommunityMovieTitle"
                    android:layout_gravity="center_horizontal|start"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="genre"
                    android:id="@+id/rowCommunityGenre"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" from "
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="year"
                    android:id="@+id/rowCommunityYear"
                    android:maxLines="1"
                    android:ellipsize="end"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_tab_icon"
                    android:id="@+id/rowCommunityFriendsIcon"
                    android:textColor="@color/color_primary_dark"
                    android:layout_marginEnd="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/rowCommunityFriendsText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/community_tab_icon"
                    android:id="@+id/rowCommunityCommunityIcon"
                    android:textColor="@color/color_primary_dark"
                    android:layout_marginEnd="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:text="New Text"
                    android:id="@+id/rowCommunityCommunityText" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
