<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="125dp"
    android:weightSum="1"
    android:background="@drawable/list_cell_2"
    android:padding="5dp"
    >

    <TextView
        android:text="@string/no_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/no_profile_picture"
        android:textSize="80sp"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:minWidth="80dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:text="@string/userTextView"
                android:id="@+id/username_textview"
                android:layout_gravity="center_horizontal|left"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:text=" just watched..."
                android:layout_gravity="center_horizontal|left"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/movieTextView"
                android:id="@+id/moviename_textview" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <RatingBar
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:isIndicator="true"
                    android:stepSize="1"
                    android:transformPivotX="0dp"
                    android:max="5"
                    android:numStars="5"
                    android:id="@+id/ratingBar"
                    android:transformPivotY="35dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:longClickable="false" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
