<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".application.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@color/color_primary">

            <TextView
                android:id="@+id/flickPickerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:textColor="@color/color_text"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/myProfileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/movie_detail_image_padding"
                android:text="@string/my_profile_icon"
                android:textColor="@color/color_text"
                android:textIsSelectable="false"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/userScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/myProfileIcon"
                android:text="100"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/color_text"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/settingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:padding="@dimen/movie_detail_image_padding"
                android:text="@string/settings_icon"
                android:textColor="@color/color_text"
                android:textSize="25sp"/>
        </RelativeLayout>

        <TabHost
            android:id="@+id/tabHost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/color_primary"/>

                <RelativeLayout
                    android:id="@+id/contentWrap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@android:id/tabs">
                </RelativeLayout>

                <com.typeof.flickpicker.application.viewpagers.UnSwipeableViewPager
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@android:id/tabs"/>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@android:id/tabs">

                    <LinearLayout
                        android:id="@+id/tabCommunity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/tabFriendsActivities"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/tabMyMovies"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/tabSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/tabRecommendations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_gravity="center"
                        android:orientation="vertical">

                    </LinearLayout>

                </FrameLayout>

            </RelativeLayout>
        </TabHost>

    </LinearLayout>


</LinearLayout>